RESOLVED FIXED290186
Unreviewed VisionOS build fix after 292461@main
https://bugs.webkit.org/show_bug.cgi?id=290186
Summary Unreviewed VisionOS build fix after 292461@main
Chris Dumez
Reported 2025-03-21 09:33:45 PDT
Fix VisionOS build after 292461@main
Attachments
Chris Dumez
Comment 1 2025-03-21 09:33:46 PDT
Chris Dumez
Comment 2 2025-03-21 09:34:13 PDT
EWS
Comment 3 2025-03-21 09:36:35 PDT
Committed 292479@main (467a0475c70b): <https://commits.webkit.org/292479@main> Reviewed commits have been landed. Closing PR #42814 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.