Unreviewed VisionOS build fix after 292461@main https://bugs.webkit.org/show_bug.cgi?id=290186 rdar://147586990

* Source/WebKit/UIProcess/WebFullScreenManagerProxy.cpp:

Canonical link: https://commits.webkit.org/292479@main